[package]
name = "btrfs-test"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fal = { version = "0.1", path = "../fal" }
fal-backend-btrfs = { version = "0.1", path = "../fal-backend-btrfs" }
