[package]
name = "extfs-fuse"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"

[dependencies]
clap = "2.23"
env_logger = "0.6"
fuse = "0.3"
libc = "0.2"
time = "0.1"

fal-backend-ext2  = { path = "../fal-backend-ext2", version = "0.1" }
fal-frontend-fuse = { path = "../fal-frontend-fuse", version = "0.1" }
