[package]
name = "fal-backend-apfs"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fal = { version = "0.1", path = "../fal" }
bitflags = "1.2"
libc = "0.2"
uuid = "0.7"
time = "0.1"
enum_primitive = "0.1"
