[package]
name = "fal-backend-apfs"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fal = { version = "0.1", path = "../fal" }

arrayvec = "0.5"
bitflags = "1.2"
chashmap = "2.2"
enum_primitive = "0.1"
libc = "0.2"
time = "0.1"
uuid = "0.7"
