[package]
name = "fal-backend-btrfs"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
fal = { path = "../fal", version = "0.1" }

blake2 = "0.8"
crc = "1"
bitflags = "1.2"
byteorder = "1.3"
num-derive = "0.3"
num-traits = "0.2"
twox-hash = "1.5"
sha2 = "0.8"
uuid = "0.8"
zerocopy = "0.3"
