[package]
name = "fal-backend-btrfs"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
default = ["crc", "sha2", "twox-hash", "blake2"]

[dependencies]
fal = { path = "../fal", version = "0.1" }

bitflags = "1.2"
byteorder = "1.3"
num-derive = "0.3"
num-traits = "0.2"
owning_ref = "0.4"
thiserror = "1"
uuid = "0.8"
zerocopy = "0.3"

crc = { version = "1", optional = true }
twox-hash = { version = "1.5", optional = true }
sha2 = { version = "0.8", optional = true }
blake2 = { version = "0.8", optional = true }
