[package]
name = "fal-backend-ext4"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
arrayvec = "0.5"
bitflags = "1.2"
bytemuck = "1.0"
crc = "1"
log = "0.4"
md4 = "0.8"
quick-error = "1.2"
scroll = { version = "0.10", features = ["derive"] }
uuid = "0.7"

fal = { path = "../fal", version = "0.1" }
