[package]
name = "fal-frontend-fuse"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ext4", "apfs"]
ext4 = ["fal-backend-ext4"]
apfs = ["fal-backend-apfs"]
btrfs = ["fal-backend-btrfs"]

[dependencies]
clap = "2.33"
env_logger = "0.6"
fal = { path = "../fal", version = "0.1" }
libc = "0.2"
time = "0.1"
fuse = "0.3"

fal-backend-ext4 = { version = "0.1", optional = true, path = "../fal-backend-ext4" }
fal-backend-btrfs = { version = "0.1", optional = true, path = "../fal-backend-btrfs" }
fal-backend-apfs = { version = "0.1", optional = true, path = "../fal-backend-apfs" }
