[package]
name = "fal-frontend-fuse"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ext4", "apfs", "io_uring"]
ext4 = ["fal-backend-ext4"]
apfs = ["fal-backend-apfs"]
btrfs = ["fal-backend-btrfs"]

# Linux-specific
aio = ["libaio-sys"]
io_uring = ["iou"]

[dependencies]
clap = "2.33"
crossbeam-queue = "0.2"
env_logger = "0.6"
fal = { path = "../fal", version = "0.1" }
libc = "0.2"
log = "0.4"
nix = "0.17"
fuse = "0.3"
parking_lot = "0.10"
thiserror = "1"
threadpool = "1.0"
time = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
iou = { version = "0.2", optional = true }
libaio-sys = { version = "0.1", path = "libaio-sys", optional = true }

fal-backend-ext4 = { version = "0.1", optional = true, path = "../fal-backend-ext4" }
fal-backend-btrfs = { version = "0.1", optional = true, path = "../fal-backend-btrfs" }
fal-backend-apfs = { version = "0.1", optional = true, path = "../fal-backend-apfs" }
