[package]
name = "fal-frontend-redox"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ext4", "apfs"]
ext4 = ["fal-backend-ext4"]
btrfs = ["fal-backend-btrfs"]
apfs = ["fal-backend-apfs"]

[lib]
name = "fal_frontend_redox"
path = "src/lib.rs"

[[bin]]
name = "ext2d"
required-features = ["ext4"]
path = "src/ext4d.rs"

[[bin]]
name = "btrfsd"
required-features = ["btrfs"]
path = "src/btrfsd.rs"

[[bin]]
name = "apfsd"
required-features = ["apfs"]
path = "src/apfsd.rs"

[dependencies]
fal = { path = "../fal", version = "0.1" }

fal-backend-ext4 = { version = "0.1", optional = true, path = "../fal-backend-ext4" }
fal-backend-btrfs = { version = "0.1", optional = true, path = "../fal-backend-btrfs" }
fal-backend-apfs = { version = "0.1", optional = true, path = "../fal-backend-apfs" }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"
